AddActiveClass function added

--- a/index.html
+++ b/index.html
@@ -28,12 +28,25 @@
         .is-size-1 {
             font-size: 30px;
         }
+        .hidden {
+            display: none;
+            font-size: 1em;
+            color: #000;
+        }
+        .hidden.active {
+            display: block;
+        }
     </style>
 </head>
 <body>
     <h1>This is starting of <strong>Web Helper</strong> created by Nurullo Salaydinov</h1>
     <p .text-danger.is-size-1>This is element with class text danger and size 1</p>
     <p #text-dark>This is element with id text dark</p>
+    <p onclick="AddActiveClass('hidden', 'active')">Click This To Open Hidden Text</p>
+
+    <p class="hidden">
+        Hidden Text Opened By Clicking Function ! add this AddActiveClass(element, className) function to add class which element you want to add
+    </p>
     
     <script src="base/base.js"></script>
     <script>
