--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Page Helper</title>
+    <title>Multi Functional Js</title>
     <style>
         body {
             margin: 0;
@@ -51,17 +51,9 @@
     </p>
     
     <script src="base/base.js"></script>
-    <script type="module">
+    <script>
         InitializeAttributes();
         ActivateStyle();
-        var fs = require('fs');
-
-        const dir = './database/temp';
-        if (!fs.existsSync(dir)) {
-            fs.mkdirSync(dir, {
-                recursive: true
-            });
-        }
     </script>
 </body>
 </html>
