media styles added

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <body>
     <img src="logo.png" alt="">
     <h1>This is starting of <strong>Web Helper</strong> created by Nurullo Salaydinov</h1>
-    <h3 style="font-family: cursive;font-weight: 900;font-size: 2.5em">This is styled Text</h3>
+    <h3 xs="color: blue" sm="color: red" md="color: white" lg="color: green" xl="color: cyan" style="font-family: cursive;font-weight: 900;font-size: 2.5em">This is styled Text</h3>
     <p .text-danger.is-size-1>This is element with class text danger and size 1</p>
     <p #text-dark>This is element with id text dark</p>
     <p onclick="AddClassName('hidden', 'active')">Click This To Open Hidden Text</p>
